// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DB 픽스처 골든 테스트: cockroachdb prisma/cockroachdb.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// category.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Category {
	@ApiProperty({type: BigInt})
	id: BigInt 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
}


// product.ts
import { Category,type Category as CategoryAsType } from './category'
import { Status } from '@prisma/client'
import { ApiProperty } from '@nestjs/swagger'


export class Product {
	@ApiProperty({type: BigInt})
	id: BigInt 
	
	@ApiProperty({type: String})
	title: string 
	
	@ApiProperty({type: Number})
	price: number 
	
	@ApiProperty({enum: Status, enumName: 'Status', example: Status.ACTIVE})
	status: Status = Status.ACTIVE
	
	@ApiProperty({isArray: true, type: String})
	tags: string[] 
	
	@ApiProperty({type: BigInt})
	categoryId: BigInt 
	
	@ApiProperty({type: () => Category})
	category: CategoryAsType 
	
	@ApiProperty({type: Date})
	createdAt: Date 
	
}

"
`;

exports[`DB 픽스처 골든 테스트: mongodb prisma/mongodb.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// address.ts
import { ApiProperty } from '@nestjs/swagger'


export class Address {
	@ApiProperty({type: String})
	city: string 
	
	@ApiProperty({type: String})
	postalCode: string 
	
	@ApiProperty({type: String})
	street: string 
	
	@ApiProperty({type: String})
	streetNumber: string 
	
}


// dealer.ts
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'
import { Address } from './address'


export class Dealer {
	@ApiProperty({type: String})
	id: string 
	
	@ApiPropertyOptional({type: Date})
	createdAt?: Date 
	
	@ApiProperty({type: Date})
	modifiedAt: Date 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({type: String})
	slug: string 
	
	@ApiProperty({type: () => Address})
	address: Address 
	
}

"
`;

exports[`DB 픽스처 골든 테스트: mssql prisma/mssql.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// category.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Category {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
}


// node.ts
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Node {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiPropertyOptional({type: Number})
	parentId?: number 
	
	@ApiPropertyOptional({type: () => Node})
	parent?: NodeAsType 
	
	@ApiProperty({isArray: true, type: () => Node})
	children: NodeAsType[] 
	
}


// product.ts
import { Category,type Category as CategoryAsType } from './category'
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Product {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	title: string 
	
	@ApiPropertyOptional({type: String})
	notes?: string 
	
	@ApiProperty({type: Number})
	price: number 
	
	@ApiProperty({type: Number})
	weight: number 
	
	@ApiProperty({type: String})
	externalId: string 
	
	@ApiProperty({type: Number})
	categoryId: number 
	
	@ApiProperty({type: () => Category})
	category: CategoryAsType 
	
	@ApiProperty({type: Date})
	createdAt: Date 
	
}

"
`;

exports[`DB 픽스처 골든 테스트: mysql prisma/mysql.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// category.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Category {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
}


// company.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Company {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({type: BigInt})
	totalIncome: BigInt = BigInt(100)
	
	@ApiProperty({type: Number})
	lat: number 
	
	@ApiProperty({type: Number})
	lng: number 
	
	@ApiProperty({type: Buffer})
	by: Buffer 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
	@ApiProperty({type: Date})
	establishedAt: Date = new Date('2000-01-01T01:00:00+00:00')
	
}


// node.ts
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Node {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiPropertyOptional({type: Number})
	parentId?: number 
	
	@ApiPropertyOptional({type: () => Node})
	parent?: NodeAsType 
	
	@ApiProperty({isArray: true, type: () => Node})
	children: NodeAsType[] 
	
}


// product.ts
import { Category,type Category as CategoryAsType } from './category'
import { Company,type Company as CompanyAsType } from './company'
import { ProductType,ProductAnotherType } from '@prisma/client'
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Product {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	title: string 
	
	@ApiProperty({type: String, example: 'abc'})
	desc: string = 'abc'
	
	@ApiProperty({type: Object})
	images: object 
	
	@ApiPropertyOptional({type: Boolean, example: false})
	isShown?: boolean = false
	
	@ApiPropertyOptional({type: Number, example: 0})
	stock?: number = 0
	
	@ApiProperty({enum: ProductType, enumName: 'ProductType'})
	type: ProductType 
	
	@ApiProperty({enum: ProductAnotherType, enumName: 'ProductAnotherType', example: ProductAnotherType.AA})
	anotherType: ProductAnotherType = ProductAnotherType.AA
	
	@ApiPropertyOptional({type: Number})
	averageRating?: number 
	
	@ApiProperty({type: Number})
	categoryId: number 
	
	@ApiProperty({type: Number})
	companyId: number 
	
	@ApiProperty({type: () => Category})
	category: CategoryAsType 
	
	@ApiProperty({type: () => Company})
	company: CompanyAsType 
	
	@ApiProperty({type: Date})
	createdAt: Date 
	
	@ApiProperty({type: Date})
	updatedAt: Date 
	
}

"
`;

exports[`DB 픽스처 골든 테스트: postgresql prisma/postgresql.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// category.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Category {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
}


// company.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Company {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({type: BigInt})
	totalIncome: BigInt = BigInt(100)
	
	@ApiProperty({type: Number})
	lat: number 
	
	@ApiProperty({type: Number})
	lng: number 
	
	@ApiProperty({type: Buffer})
	by: Buffer 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
	@ApiProperty({isArray: true, type: String})
	tags: string[] 
	
	@ApiProperty({isArray: true, type: String})
	tagsWithEmptyDefault: string[] = []
	
	@ApiProperty({isArray: true, type: String})
	tagsWithDefault: string[] = ['a','b']
	
	@ApiProperty({isArray: true, type: Number})
	numTags: number[] 
	
	@ApiProperty({isArray: true, type: Number})
	numTagsWithEmptyDefault: number[] = []
	
	@ApiProperty({isArray: true, type: Number})
	numTagsWithDefault: number[] = [1,2]
	
}


// product.ts
import { Category,type Category as CategoryAsType } from './category'
import { Company,type Company as CompanyAsType } from './company'
import { ProductType,ProductAnotherType } from '@prisma/client'
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Product {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	title: string 
	
	@ApiProperty({type: String, example: 'abc'})
	desc: string = 'abc'
	
	@ApiProperty({type: Object})
	images: object 
	
	@ApiPropertyOptional({type: Boolean, example: false})
	isShown?: boolean = false
	
	@ApiPropertyOptional({type: Number, example: 0})
	stock?: number = 0
	
	@ApiProperty({enum: ProductType, enumName: 'ProductType'})
	type: ProductType 
	
	@ApiProperty({enum: ProductAnotherType, enumName: 'ProductAnotherType', example: ProductAnotherType.AA})
	anotherType: ProductAnotherType = ProductAnotherType.AA
	
	@ApiPropertyOptional({type: Number})
	averageRating?: number 
	
	@ApiProperty({type: Number})
	categoryId: number 
	
	@ApiProperty({type: Number})
	companyId: number 
	
	@ApiProperty({type: () => Category})
	category: CategoryAsType 
	
	@ApiProperty({type: () => Company})
	company: CompanyAsType 
	
	@ApiProperty({type: Date})
	createdAt: Date 
	
	@ApiProperty({type: Date})
	updatedAt: Date 
	
}

"
`;

exports[`DB 픽스처 골든 테스트: sqlite prisma/sqlite.prisma의 전체 모델이 기대한 형태로 생성된다 1`] = `
"// category.ts
import { Product,type Product as ProductAsType } from './product'
import { ApiProperty } from '@nestjs/swagger'


export class Category {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	name: string 
	
	@ApiProperty({isArray: true, type: () => Product})
	products: ProductAsType[] 
	
}


// node.ts
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Node {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiPropertyOptional({type: Number})
	parentId?: number 
	
	@ApiPropertyOptional({type: () => Node})
	parent?: NodeAsType 
	
	@ApiProperty({isArray: true, type: () => Node})
	children: NodeAsType[] 
	
}


// product.ts
import { Category,type Category as CategoryAsType } from './category'
import { ApiProperty,ApiPropertyOptional } from '@nestjs/swagger'


export class Product {
	@ApiProperty({type: Number})
	id: number 
	
	@ApiProperty({type: String})
	title: string 
	
	@ApiPropertyOptional({type: String})
	description?: string 
	
	@ApiProperty({type: Number})
	price: number 
	
	@ApiProperty({type: Boolean, example: true})
	isActive: boolean = true
	
	@ApiProperty({type: Number})
	categoryId: number 
	
	@ApiProperty({type: () => Category})
	category: CategoryAsType 
	
	@ApiProperty({type: Date})
	createdAt: Date 
	
}

"
`;
